# mcmc_studies

./: .gitignore  CMakeLists.txt  README.md  setup_env.sh
inputs/: config.cfg
inputs/configs/: config.cfg
job_scripts/: runMCMC.sh
job_scripts/sh/: runMCMC.sh  runMCMC_container.sh  submit_MCMC.sh
macros/: AnalyzePosteriorChains.cxx  AnalyzePosteriorCov.cxx  AnalyzePosteriors.cxx  CMakeLists.txt  CalcPosteriorCovmat.cxx  CalcSuboptimality.cxx  FindMCMCStart.cxx  GenerateCovmat.cxx  GenerateTargetCovmat.cxx  MCMCPerformance.cxx  PlotTraces.cxx  RunMCMC.cxx
matrix/: CMakeLists.txt  Covariance.cxx  Covariance.h  Metrics.h
mcmc/: CMakeLists.txt  MCMCConvergence.cxx  MCMCConvergence.h  MCMCTune.cxx  MCMCTune.h  mcmc.cxx  mcmc.h
utils/: CMakeLists.txt  CommandHandler.cxx  CommandHandler.h  ConfigManager.cxx  ConfigManager.h  Covariance.cxx  Covariance.h  mcmc.cxx  mcmc.h
